--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -46,6 +46,7 @@
     "lodash.uniqby": "^4.7.0",
     "monaco-editor": "^0.51.0",
     "monaco-editor-auto-typings": "^0.4.5",
+    "mysql2": "^3.12.0",
     "openid-client": "^5.7.0",
     "otplib": "^12.0.1",
     "passport": "^0.7.0",
